Don't use Lato Thin due to readability issues

--- a/app/components/ui/sunrise-step/styles.scss
+++ b/app/components/ui/sunrise-step/styles.scss
@@ -2,5 +2,5 @@
 
 .sunrise-step {
 	font-size: 1.4rem;
-	font-weight: 200;
+	font-weight: 300;
 }
